[package]
name = "warp_crud"
version = "0.1.0"
authors = ["RyanFrazier <rfrazier716@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "warp_crud"

[dependencies]
# The Framework we'll be using
warp="0.3.0"
reqwest = {version="0.11.3", features=["cookies"]} # used for integration tests
tokio = {version="1.6.0", features=["full"]}
mongodb = {version="2.0.0-beta.3", features=["bson-chrono-0_4", "bson-uuid-0_8"]}
futures = "0.3.15"

# Session IDs
uuid = { version = "0.8", features = ["serde", "v4"] }

# Tracing
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

# Other
thiserror = "1.0.25"
confy = "0.4.0"
serde = "1.0.126"
config = "0.10"
lazy_static = "1.4.0"
chrono = {version="0.4.19", features = ["serde"]}
serde_derive = "1.0.126"
rand = "0.8.4"

[dev-dependencies]
serial_test = "0.5.1"