[package]
name = "warp_crud"
version = "0.1.0"
authors = ["RyanFrazier <rfrazier716@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "warp_crud"

[dev-dependencies]
reqwest = {version="0.11.12", features=["cookies", "json"]}

[dependencies]
# The Framework we'll be using
warp="0.3.3"
tokio = {version="1.21.2", features=["full"]}
mongodb = {version="2.3.1", features=["bson-chrono-0_4", "bson-uuid-0_8"]}

# Session IDs
uuid = { version = "0.8", features = ["serde", "v4"] }

# Tracing
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}

# Other
thiserror = "1.0.37"
serde = "1.0.147"
config = "0.13.2"
chrono = {version="0.4.22", features = ["serde"]}
serde_derive = "1.0.147"
rand = "0.8.5"